# cmake-example

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
hello/: CMakeLists.txt
hello/include/hello/: hello.h
libhello/: CMakeLists.txt  hello.cxx
libhello/include/hello/: export.h  hello.h
src/: CMakeLists.txt  hello.cxx
